# odoo-from-13-to-18

./: .gitignore  README.md
arquitectura/OCA/: .copier-answers.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  README.md
arquitectura/OCA/conf/: odoo.cfg
arquitectura/odoo13/: README.md
arquitectura/odoo14/: README.md
arquitectura/odoo15/: README.md
arquitectura/odoo16/: README.md
arquitectura/odoo17/: README.md
arquitectura/odoo18/: README.md  README_COPY_PROD_TEST.md  README_TIPS_BD.md  bus_verificacion.sh  debugpy_bootstrap.py  start_odoo.sh  start_odoo_gevent.sh  start_odoo_puertos.sh  stop_odoo_puertos.sh  test_odoo_bus.py  verificar_websocket.sh  xxstart_odoo.sh
arquitectura/odoo18/clientes/cliente1/: README.md  TIPS_PERFORMANCE.md
arquitectura/odoo18/clientes/panna/: README.md
arquitectura/odoo18/clientes/testclient/: README.md
arquitectura/odoo19/: 2_restaurar_backup_files.sh  9_1_backup_bd.sh  9_3__restore_odoo_filestore.sh  README.md  clonar_bd.sh  clonar_bd_example.sh  docker-compose.postgrestest.yml  docker-compose.yaml  nohup.out  readme_delete_modulo_orphan_bd.sh  start_odoo.sh  stop_odoo_puertos.sh  tasa_bcv.py
arquitectura/odoo19/backup/: backup.sh  restore.sh
arquitectura/odoo19/clientes/cliente1/: README.md
arquitectura/odoo19/clientes/hoteljumpjibe_19/: README.md
arquitectura/odoo19/clientes/hoteljumpjibe_19/extra-addons/oca/setup/_metapackage/: pyproject.toml
arquitectura/odoo19/clientes/integraia_19/: README.md
arquitectura/odoo19/secrets/: postgres_password.txt
(+2032 files in other folders)
