[project]
name = "odoo-addons-oca-account-invoicing"
version = "19.0.20260326.1"
dependencies = [
    "odoo-addon-account_global_discount==19.0.*",
    "odoo-addon-account_invoice_fixed_discount==19.0.*",
    "odoo-addon-account_invoice_pricelist==19.0.*",
    "odoo-addon-account_invoice_pricelist_sale==19.0.*",
    "odoo-addon-account_invoice_refund_link==19.0.*",
    "odoo-addon-account_invoice_show_currency_rate==19.0.*",
    "odoo-addon-account_invoice_tax_note==19.0.*",
    "odoo-addon-account_invoice_triple_discount==19.0.*",
    "odoo-addon-portal_account_personal_data_only==19.0.*",
    "odoo-addon-sale_order_invoicing_qty_percentage==19.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 19.0",
]
